# qubojl

./: LICENSE  README.md  pyproject.toml
src/qubojl/: __init__.py  convert.py  juliapkg.json  wrapper.py
tests/: model.lp  test.py
